upload profile pic

--- a/index.html
+++ b/index.html
@@ -91,9 +91,7 @@
                     </div>
                 </div>
                 <div class="about-image">
-                    <div class="image-placeholder">
-                        <i class="fas fa-user-circle"></i>
-                    </div>
+                    <img src="kat.jpg" alt="Hanmei Zhang" class="profile-image">
                 </div>
             </div>
         </div>
@@ -649,3 +647,4 @@
 </body>
 
 </html>
+
